# moai-flow

./: .dockerignore  .gitignore  .mcp.json  .mcp.json.disabled-20251128-154729  BYZANTINE_CONSENSUS.md  BYZANTINE_IMPLEMENTATION_SUMMARY.md  CIRCULAR-IMPORT-FIX-SUMMARY.md  CLAUDE.md  CRDT_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT.md  Dockerfile  GOSSIP_PROTOCOL_DELIVERABLES.md  HEALING_ANALYTICS_IMPLEMENTATION.md  HEARTBEAT_MONITOR_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_HEALTH_METRICS.md  IMPLEMENTATION_SUMMARY_REPO_AGENT.md  MANIFEST.in  PHASE-6B-IMPLEMENTATION-SUMMARY.md  PHASE6B_INTEGRATION_SUMMARY.md  PHASE_6A_HEALTH_REPORTER_COMPLETION.md  PHASE_6B_WEIGHTED_CONSENSUS_COMPLETION.md  PRODUCTION-READINESS-CHECKLIST.md  README.md  SWARM_COORDINATOR_SUMMARY.md  TEST_CONSOLIDATION_SUMMARY.md  TEST_STAR_TOPOLOGY_SUMMARY.md  circular-import-analysis.md  circular-import-fix-verification.md  docker-compose.yml  pyproject.toml  run_crdt_examples.py  test_crdt_standalone.py
.claude/: 401-ERROR-FIXES-APPLIED.md  API_KEY_SETUP.md  COMPLETE-REMOVAL-REPORT.md  FINAL-401-ERROR-RESOLUTION.md  GLM-TOKEN-RESTORED-FIX.md  SUBSCRIPTION_AUTH_SETUP.md  moai-flow-config.json  settings.json  settings.local.json.backup-20251128-223505  settings.local.json.backup-401-fix-20251129-122922
.github/: PULL_REQUEST_TEMPLATE.md
.hive-mind/: config.json  hive.db
.swarm/: memory.db
_config/: 401-AUTHENTICATION-ERROR-ROOT-CAUSE-ANALYSIS.md  COMPLETE-RESOLUTION-SUMMARY.md  KOREAN-VERSION.md  README.md  fix-401-auth.sh
docs/: D2CODING_INSTALLATION_GUIDE.md  D2CODING_QUICKSTART.md  KOREAN_TRANSLATION_SUMMARY.md  SCRIPT_TESTING_REPORT.md  index.md  mcp-verification-test-report.md
examples/: __init__.py
logs/: chat.json  notification.json  pre_compact.json  session_start.json  (+3 more)
(+1293 files in other folders)
